--- a/index.html
+++ b/index.html
@@ -61,36 +61,38 @@
     <!--My Work Section-->
     <div class="container-fluid bg-3 text-center" id="WHAT">
         <h2>Check Out My Work</h2>
+        <!--First Project Row-->
         <div class="row" style="display: inline;">
             <div class="col-sm-12">
               <a href="https://marinemasta.github.io/prework-about-me/" target="_blank">
                 <img src="./assets/images/dark.png"class="img-responsive" id="first" alt="Cute white alpaca with mountains in the background">
-                <br>
+                <br/>
               <p>First Project: Prework</p>
             </a>
             </div>
         </div>
-        <br>
-        <br>
+        <br/>
+        <br/>
+        <!--Other Projects Row-->
         <div class="row">
             <div class="col-sm-4">
               <a href="https://marinemasta.github.io/Horiseon-Website/" target="_blank">
                 <img src="./assets/images/rock.png"class="img-responsive" id="project2" alt="Brown baby alpaca in the grass">
-                <br>
+                <br/>
               <p>Second Project: Horiseon</p>
             </a>
             </div>
             <div class="col-sm-4">
               <a href="" target="_blank">
                 <img src="./assets/images/twins.png"class="img-responsive" id="project3" alt="Close up of a group of brown and white alpacas">
-                <br>
+                <br/>
               <p>Third Project: Soon To Come!</p>
             </a>
             </div>
             <div class="col-sm-4">
               <a href="" target="_blank">
                 <img src="./assets/images/familia.png"class="img-responsive" id="project4" alt="Group of white and brown alpacas near water and rocks">
-                <br>
+                <br/>
               <p>Fourth Project: Expect More Alpacas!</p>
             </a>
             </div>
@@ -99,24 +101,26 @@
     <!--Contact Me Section-->
     <div class="container-fluid bg-4 text-center" id="CONTACT">
         <h2>Contact Me</h2>
+        <!--Phone, GitHub, Email Row-->
         <div class="row">
             <div class="col-sm-4">
               <b>Phone</b>
-              <br>
+              <br/>
               <a class="contacter" href="tel:7274822268">(727) 482-2268</a>
             </div>
             <div class="col-sm-4">
               <b>Github</b>
-              <br>
+              <br/>
               <a class="contacter" href="https://github.com/MarineMasta" target="_blank">https://github.com/MarineMasta</a>
             </div>
             <div class="col-sm-4">
               <b>Email</b>
-              <br>
+              <br/>
               <a class="contacter" href="mailto:marine.bruno98@gmail.com">marine.bruno98@gmail.com</a>
             </div>
         </div>
-        <br>
+        <br/>
+        <!--Facebook Feed Row-->
         <div class="row">
             <div class="col-sm-12">
                 <b>Facebook</b><br>
